<resources>
    <string name="app_name">WealthWise</string>
    <string name="enter_your_e_mail">Enter your e-mail:</string>
    <string name="enter_your_password">Enter your password:</string>
    <string name="new_to_wealthwise">New to WealthWise?\n<b>Register Now!</b></string>
    <string name="login_label">Login</string>
    <string name="enter_email_and_password">Please enter your e-mail address and choose your password</string>
    <string name="registration">Registration</string>
    <string name="register">Register</string>
    <string name="please_wait">Please wait</string>
    <string name="registration_successful">Registration successful!</string>
    <string name="registration_failed">Registration failed, please try again!</string>
    <string name="login_successful">Login successful!</string>
    <string name="login_failed">Login failed, please try again!</string>
    <string name="revenues_and_expenses">Revenues and Expenses</string>
    <string name="sign_out">Sign Out</string>
    <string name="image_upload_success">Image uploaded successfully!</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="alert_dialog_title">Do you with to delete previously entered emails?</string>
    <string name="ok_label">OK</string>
    <string name="cancel_label">Cancel</string>
    <string name="add_data">Add data</string>
    <string name="add_revenue">Add revenue</string>
    <string name="add_expense">Add expense</string>
    <string name="expenses_and_revenues">Expenses and revenues</string>
    <string name="expenses">Expenses</string>
    <string name="revenues">Revenues</string>
    <string name="revenue">Revenue</string>
    <string name="expense">Expense</string>
    <string name="overview">Overview</string>
    <string name="type">Type:</string>
    <string name="amount">Amount:</string>
    <string name="description">Description:</string>
    <string name="add_new_revenue_expense">Add new revenue/expense</string>
    <string name="previous_entries_list">Previous entries list</string>
    <string name="see_previous_entries">See previous entries</string>
    <string name="btn_scan">SCAN</string>
</resources>