<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/toolbar_color">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/siv_back"
            android:layout_width="42dp"
            android:layout_height="52dp"
            android:padding="@dimen/small_margin"
            android:src="@drawable/arrow_left"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/normal_text"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/revenues_and_expenses"/>

    </com.google.android.material.appbar.MaterialToolbar>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:hint="@string/description"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:layout_marginBottom="@dimen/huge_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_edit_text_type"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/transparent"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_type"
        android:hint="@string/amount"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:layout_marginTop="@dimen/small_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_edit_text_amount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/transparent"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_amount"
        android:hint="@string/type"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:layout_marginTop="@dimen/small_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_edit_text_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false"
            android:backgroundTint="@color/transparent"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbtn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/large_margin"
        android:text="@string/add_data"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbtn_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mbtn_add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/large_margin"
        android:text="@string/btn_scan"/>

    <include
        android:id="@+id/progress_dialog"
        android:visibility="gone"
        layout="@layout/progress_dialog"/>

</androidx.constraintlayout.widget.ConstraintLayout>