<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar_color"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/siv_back"
            android:layout_width="42dp"
            android:layout_height="52dp"
            android:padding="@dimen/small_margin"
            android:src="@drawable/arrow_left"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textSize="@dimen/medium_text"
            android:textStyle="bold"
            android:layout_marginEnd="@dimen/medium_margin"
            android:text="@string/registration"/>

    </com.google.android.material.appbar.MaterialToolbar>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtv_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_email_and_password"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/text_input_layout_email"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="@dimen/medium_text"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_e_mail"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:layout_marginBottom="@dimen/small_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="0dp"
            android:backgroundTint="@color/transparent"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foregroundTint="@color/button_color"
        android:hint="@string/enter_your_password"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:layout_marginTop="@dimen/small_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="0dp"
            android:backgroundTint="@color/transparent"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:text="@string/register"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/siv_logo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/btn_register"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingHorizontal="@dimen/basic_padding"
        android:scaleType="centerCrop"
        android:src="@drawable/wealth_wise"/>

    <include
        android:id="@+id/progress_dialog"
        android:visibility="gone"
        layout="@layout/progress_dialog"/>

</androidx.constraintlayout.widget.ConstraintLayout>