<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/siv_menu_delete_emails"
        android:layout_width="24dp"
        android:layout_height="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/three_dots"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="24dp"
        android:src="@drawable/wealth_wise"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        android:hint="@string/enter_your_e_mail"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:layout_marginTop="@dimen/small_margin">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/text_input_edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="24dp"
            android:backgroundTint="@color/transparent"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foregroundTint="@color/button_color"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_email"
        android:hint="@string/enter_your_password"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:layout_marginTop="@dimen/small_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="0dp"
            android:backgroundTint="@color/transparent"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_label"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:backgroundTint="@color/button_color"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_password"
        app:layout_constraintBottom_toTopOf="@id/mtv_register_now"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtv_register_now"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_password"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="@dimen/medium_text"
        android:gravity="center"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:text="@string/new_to_wealthwise"/>

    <include
        android:id="@+id/progress_dialog"
        android:visibility="gone"
        layout="@layout/progress_dialog"/>

</androidx.constraintlayout.widget.ConstraintLayout>